# ringopus_remote

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: macos-build.yml  windows-build.yml
installer/: build.ps1  installer.nsi
lib/: app_log.dart  bridge_client.dart  main.dart  mediasoup_signaling.dart  produce_spike_page.dart  producer_home_page.dart  router_rtp_capabilities.dart  screen_source_picker.dart  theme.dart  xmpp_produce_page.dart
lib/mediasoup/: mediasoup_client.dart
lib/mediasoup/src/: consumer.dart  data_consumer.dart  data_producer.dart  device.dart  ortc.dart  producer.dart  rtp_parameters.dart  scalability_modes.dart  sctp_parameters.dart  sdp_object.dart  transport.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/xmpp/: constant_interval_reconnection_policy.dart  xmpp_client.dart
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
native/whixp_transport/: PROVENANCE.md
native/whixp_transport/src/: stanza.rs  (+1 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: input_inject.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_ringopus_remote_producer.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ringopus_remote_producer.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
