[package]
name = "rust_lib_ringopus_remote_producer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
enigo = "0.6.1"
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
